Fixed a problem with the z-index

--- a/generalstyles.css
+++ b/generalstyles.css
@@ -24,7 +24,7 @@ html{
     position: fixed;
     width: 100%;
     top: 0px;
-    z-index: 1;
+    z-index: 999999;
 }
 .nav-links{
     color: #FFFEFA;
